--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: closetshare
 description: "Ứng dụng chia sẻ tủ đồ - CloseShare App"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -28,36 +28,37 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.0.2
+  toastification: ^3.0.3
   #Icons
   font_awesome_flutter: ^10.9.1
   # UI & Navigation
   cupertino_icons: ^1.0.8
   intl_phone_field: ^3.2.0
-  carousel_slider: ^4.2.0 
+  carousel_slider: ^4.2.0
   smooth_page_indicator: ^1.2.1
   # State Management
   flutter_bloc: ^8.1.6
   bloc: ^8.1.4
-  
+
   # HTTP & API
   dio: ^5.4.3+1
   retrofit: ^4.1.0
   json_serializable: ^6.8.0
   json_annotation: ^4.9.0
-  
+
   # Storage
   shared_preferences: ^2.2.3
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  
+
   # Utils
   get_it: ^7.7.0
   equatable: ^2.0.5
   dartz: ^0.10.1
-  
+
   # UI Components
   cached_network_image: ^3.3.1
   flutter_svg: ^2.0.10+1
@@ -71,7 +72,7 @@ dev_dependencies:
   build_runner: ^2.4.12
   retrofit_generator: ^8.1.0
   hive_generator: ^2.0.1
-  
+
   # Linting
   flutter_lints: ^5.0.0
 json_serializable: ^6.8.0
@@ -87,6 +88,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
+    - .env
 
   # Custom fonts
   # fonts:
