--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   retrofit: ^4.1.0
   json_serializable: ^6.8.0
   json_annotation: ^4.9.0
+  # Cookie handling for Dio
+  cookie_jar: ^3.0.1
+  dio_cookie_manager: ^2.0.0
 
   # Storage
   shared_preferences: ^2.2.3
@@ -58,11 +61,14 @@ dependencies:
   get_it: ^7.7.0
   equatable: ^2.0.5
   dartz: ^0.10.1
+  path_provider: ^2.1.5
 
   # UI Components
   cached_network_image: ^3.3.1
   flutter_svg: ^2.0.10+1
   curved_navigation_bar: ^1.0.6
+  image_picker: ^1.2.0
+  flutter_markdown: ^0.7.7+1
 
 dev_dependencies:
   flutter_test:
